--- a/client/wxapp/pages/orderSettle/orderSettle.wxss
+++ b/client/wxapp/pages/orderSettle/orderSettle.wxss
@@ -2,3 +2,4 @@
 view { position: relative; }
 page { height: 100%; background-color: var(--color24);}
 .article { width: 100%; height: 100%;overflow: hidden;background-color: var(--color24);}
+.orderInfoScroll .box .cardListBox .UserCouponBox  .right .txt.active{color: var(--color3);}
