--- a/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxss
+++ b/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxss
@@ -47,3 +47,5 @@ page { height: 100%; background-color: var(--color24);}
 .codeBox{margin: 25rpx auto;border: 1rpx solid var(--color3);overflow: hidden;width: 260rpx;height: 260rpx;position: relative;}
 .codeBox canvas{position: absolute;top: 50%;left: 50%;transform: translate(-50%,-50%);}
 /* .codeBox .img{width: 100%;height: 100%;position: absolute;top: 0;left: 0;} */
+
+.orderInfoScroll .box .cardListBox .UserCouponBox  .right .txt.active{font-size: 30rpx;color: var(--color3);}
